# graph-auth-example1

./: .env  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml  rmi_local.sh  start_django.sh
graphpartition/: asgi.py  settings.py  urls.py  wsgi.py
website/: demo.py  neomodels.py  urls.py  views.py
website/management/commands/: demodata.py
website/static/: customize.css
website/templates/: base.html  index.html  login.html
