[tool.poetry]
name = "graphpartition"
version = "0.1.0"
description = "A Django and Neo4J based project to work with RBAC in graph data"
authors = ["Jelmer de Reus"]
license = "Simplified BSD license"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
neomodel = "^5.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
